--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-rt = "2.10.0"
 actix-web = "4"
 reqwest = "0.12.4"
 serde = { version = "1.0.203", features = ["derive"] }
